v1.9.80 (work in progress)
      * Change license to the Apache 2.0 license.
      * Completely redesigning package layouts.
      * Removing "fat" installation options.
      * Fall back to statically embedding of zlib into binaries (currently
        v1.3.1). Only envisioned to be used for windows builds.
      * Support GCC 14.
      * Support the Intel One API compiler.
      * Completely drop support for Python2.
      * MCPL will no longer be available for building without zlib support, and
        going forward all MCPL builds will be able to produce and read with
        gzipped MCPL files. Accordingly, the MCPL_ENABLE_ZLIB flag will now only
        have the options: USEPREINSTALLED, FETCH and DEFAULT. The DEFAULT value
        will in general imply USEPREINSTALLED, except on WINDOWS where it will
        imply FETCH.
      * Many obsolete CMake options were changed or simply removed.
      * Fix bug when files were not closed properly when merging empty files.
      * When merging files in place, it is now an error if any of the files
        being merged are repeated. This used to be merely a WARNING, but in
        order to get consistent behaviour on all platforms, this now becomes an
        error.

v1.6.2 2023-06-06
      * Work again with latest numpy by removing usage of deprecated numpy.float
        and numpy.int aliases (Thanks Milan Klausz and Jose Robledo, see also
        github issue #72).

v1.6.1 2022-12-08
      * Fixed mcplexample_pyread so it is able to work without the user setting
        PYTHONPATH (this is still not very robust as it for now assumes that the
        user did not modify the default installation location).
      * Attempt to improve MCPL_ENABLE_ZLIB=FETCH mode by applying correct
        private compilation definitions.

v1.6.0 2022-11-11
      * Updated all MCPL CMake options to have named prefixed with MCPL_ and use
        a more consistent naming scheme (mctools/mcpl#67). For example